# langchain-foxnose

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api-reference.md  changelog.md  configuration.md  examples.md  getting-started.md  index.md  loader.md  retriever.md  tool.md
examples/: agent_tool.py  async_retrieval.py  basic_retrieval.py  document_loader.py  filtered_retrieval.py  hybrid_search.py  vector_field_search.py
src/langchain_foxnose/: __init__.py  _document_mapper.py  _search.py  _validators.py  loaders.py  retrievers.py  tools.py
tests/: conftest.py  test_loader.py  test_retriever.py  test_retriever_async.py  test_search_builder.py
tests/integration/: test_live.py
tests/integration_tests/: conftest.py  test_standard.py
tests/unit_tests/: test_document_mapper.py  test_imports.py  test_retriever.py  test_retriever_async.py  test_tool.py  test_validators.py
