[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-foxnose"
version = "0.2.1"
description = "LangChain integration for FoxNose - the knowledge layer for RAG and AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "FoxNose"}]
requires-python = ">=3.9"
keywords = ["foxnose", "langchain", "rag", "ai", "retriever", "embeddings", "knowledge-base", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "foxnose-sdk>=0.4.2",
    "langchain-core>=0.3.0,<2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]
lint = [
    "ruff>=0.4",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
"Homepage" = "https://foxnose.net?utm_source=github&utm_medium=repository&utm_campaign=langchain-foxnose"
"Documentation" = "https://langchain-foxnose.readthedocs.io"
"FoxNose Docs" = "https://foxnose.net/docs?utm_source=github&utm_medium=repository&utm_campaign=langchain-foxnose"
"Source" = "https://github.com/FoxNoseTech/langchain-foxnose"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["langchain_foxnose"]
