[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-foxnose"
version = "0.3.0"
description = "LangChain integration for FoxNose - the knowledge layer for RAG and AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "FoxNose"}]
requires-python = ">=3.9"
keywords = ["foxnose", "langchain", "rag", "ai", "retriever", "embeddings", "knowledge-base", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "foxnose-sdk>=0.5.0",
    "langchain-core>=0.3.0,<2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-socket",
    # Pin exact version: new releases may add tests that break CI.
    # Using 0.3.x line for Python 3.9 compatibility (1.x requires >=3.10).
    "langchain-tests==0.3.20",
]
lint = [
    "ruff>=0.4",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
"Homepage" = "https://foxnose.net"
"Documentation" = "https://langchain-foxnose.readthedocs.io"
"Repository" = "https://github.com/FoxNoseTech/langchain-foxnose"
"Issue Tracker" = "https://github.com/FoxNoseTech/langchain-foxnose/issues"
"Changelog" = "https://langchain-foxnose.readthedocs.io/changelog/"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["langchain_foxnose"]

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
warn_return_any = false
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["foxnose_sdk.*"]
ignore_missing_imports = true
